@@ -55,7 +55,7 @@ def _get_ttype_class(ttype):
 CSSFILE_TEMPLATE = '''\
 td.linenos { background-color: #f0f0f0; padding-right: 10px; }
 span.lineno { background-color: #f0f0f0; padding: 0 5px 0 5px; }
-pre { line-height: 125%; }
+pre { line-height: 125%%; }
 %(styledefs)s
 '''
 
